--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start --tunnel",
+    "dev": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^18.0.1",
     "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-native-picker/picker": "^2.4.9",
     "@rneui/base": "^4.0.0-rc.7",
@@ -17,8 +19,10 @@
     "expo-clipboard": "~4.1.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.71.6",
     "react-native-safe-area-context": "^4.5.1",
+    "react-native-web": "~0.18.10",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
