--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start --tunnel",
+    "start": "expo start --tunnel -c",
     "dev": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -15,12 +15,18 @@
     "@react-native-picker/picker": "^2.4.9",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
+    "@types/base-64": "^1.0.0",
+    "@types/react-native-crypto-js": "^1.0.0",
+    "base-64": "^1.0.0",
+    "crypto-js": "^4.1.1",
     "expo": "~48.0.10",
     "expo-clipboard": "~4.1.2",
+    "expo-device": "^5.2.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-crypto-js": "^1.0.0",
     "react-native-safe-area-context": "^4.5.1",
     "react-native-web": "~0.18.10",
     "typescript": "^4.9.4"
