--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,21 +2,11 @@
   "compilerOptions": {
     "target": "esnext",
     "module": "esnext",
-    "lib": [
-      "esnext",
-      "dom"
-    ],
+    "moduleResolution": "node",
     "jsx": "react-native",
     "strict": true,
     "esModuleInterop": true,
-    "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true,
-    "noImplicitAny": true,
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "baseUrl": "./",
+    "baseUrl": "./src",
     "paths": {
       "*": [
         "*",
@@ -25,10 +15,10 @@
     }
   },
   "exclude": [
-    "node_modules",
-    "babel.config.js",
-    "metro.config.js",
-    "jest.config.js"
+    "node_modules"
+  ],
+  "include": [
+    "./src/**/*"
   ],
   "extends": "expo/tsconfig.base"
 }
