--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build": "eas build -p android"
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
