--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo": "~48.0.10",
     "expo-clipboard": "~4.1.2",
     "expo-device": "^5.2.1",
+    "expo-local-authentication": "~13.3.0",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
